# nmrs_toolkit

./: .gitignore  .nmrs_config.example.ini  FACILITY_GUIDE.md  MIGRATION_PLAN.md  NMRSToolkit_v1.0.0.spec  NMRSToolkit_v1.1.0.spec  NMRSToolkit_v1.1.1.spec  NMRSToolkit_v1.1.2.spec  NMRSToolkit_v1.2.0.spec  NMRSToolkit_v1.2.1.spec  NMRSToolkit_v2.0.0.spec  README.md  build.py  decrypt_nmrs_backup.py  derive_key.py  nmrs_toolkit.py  nmrs_toolkit_pitch_deck_prompt.txt  pyproject.toml  requirements.txt  run.py  update_config.bat  update_config.ps1  update_config.sh
nmrs_toolkit/: __init__.py  __main__.py  app.py  bridge.py  config.py  constants.py  crypto.py  db.py  headless.py  logger.py  scheduler.py  ui_tk.py
nmrs_toolkit/dashboard/: __init__.py  clinical.py  disagg.py  exports.py  indicators.py  loader.py
nmrs_toolkit/frontend/: app.js  bridge.js  components.css  events.js  icons.js  index.html  logviewer.js  tokens.css
nmrs_toolkit/tests/: __init__.py  test_backup_bridge.py  test_bridge.py  test_clinical.py  test_crypto.py  test_dashboard_bridge.py  test_file_dialogs.py  test_headless_no_webview.py  test_indicators.py  test_linelist_bridge.py  test_logger.py  test_merge.py  test_restore.py  (+1 more)
scripts/: AHD_Data_Script.sql  AHD_SCRIPT_24TH_OCTOBER_2025.sql  ARTLinelist_Report_FROM_nmrsreports-1.0.6.5_290126.sql  EAC Script V2.5 07-08-2025_modified.sql  FAST_RADET_version3_12-SEP-24_ubuntu.sql  FAST_RADET_version3_19-May-2024_updated.sql  Functions_combined_openmrs_290126.sql  Last 10-enhanced-encounter v_10_1.sql  OTZLinelist.sql  PMTCT_ANC.sql  TreatmentLinelistv3_2.sql  nmrs_functions_modified.sql
(+17 files in other folders)
